# cerebras-pytorch-src

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cerebras/: __init__.py
cerebras/appliance/: __init__.py  cluster_config.py  environment.py  log.py
cerebras/appliance/cluster/: cluster_details.py
cerebras/appliance/data/: conversions.py  dtypes.py
cerebras/appliance/pb/framework/: appliance_service_pb2.py
cerebras/appliance/pb/workflow/appliance/common/: common_config_pb2.py
cerebras/appliance/pb/ws/: rtfx_pb2.py
cerebras/appliance/storage/: __init__.py  context.py  serializers.py
cerebras/appliance/utils/: __init__.py  _contexts.py  classes.py  descriptor.py  file.py  memory.py  process.py  signal.py  typing.py  units.py
cerebras/pytorch/: __init__.py  backend.py  distributed.py  saver.py
cerebras/pytorch/amp/: __init__.py  _amp_state.py  grad_scaler.py  optimizer_step.py
cerebras/pytorch/backend/: ltc_backend.py
cerebras/pytorch/core/: __init__.py  compile.py
cerebras/pytorch/metrics/: __init__.py  accuracy.py  dice_coefficient.py  fbeta_score.py  mean_iou.py  metric.py  perplexity.py
cerebras/pytorch/optim/: ASGD.py  Adadelta.py  Adafactor.py  Adagrad.py  AdamBase.py  Adamax.py  Lamb.py  Lion.py  NAdam.py  RAdam.py  RMSprop.py  Rprop.py  SGD.py  __init__.py  lr_scheduler.py  optimizer.py  scheduler.py  weight_decay_scheduler.py
cerebras/pytorch/saver/: __init__.py  storage.py
cerebras/pytorch/sparse/: __init__.py  base.py  configure.py  dynamic.py  gmp.py  group.py  init.py  rigl.py  set.py  static.py  utils.py
cerebras/pytorch/utils/: step_closures.py
cerebras/pytorch/utils/benchmark/utils/: __init__.py  dataloader.py
cerebras/pytorch/utils/data/: __init__.py  dataloader.py  dataset.py  utils.py
cerebras_pytorch-2.10.0/: .gitignore  AGENTS.md  README.md  UV_PROJECT_SUMMARY.md  pyproject.toml
cerebras_pytorch-2.10.0/_cerebras_src_tools/: __init__.py  compile_cerebras.py
cerebras_pytorch-2.10.0/cerebras/: appliance
cerebras_pytorch-2.10.0/cerebras/pytorch/: _version.py
cerebras_pytorch-2.10.0/cerebras/pytorch/backend/: ltc_backend.py
cerebras_pytorch-2.10.0/cerebras/pytorch/core/: appliance.py  device.py  modes.py
cerebras_pytorch-2.10.0/cerebras/pytorch/lib/: __init__.py
cerebras_pytorch-2.10.0/cerebras/pytorch/lib/_torch_mlir/_mlir_libs/: __init__.py
cerebras_pytorch-2.10.0/cerebras/pytorch/optim/: optimizer.py
cerebras_pytorch-2.10.0/cerebras/pytorch/utils/benchmark/utils/: dataloader.py
cerebras_pytorch-2.10.0/cerebras_pytorch-2.10.0.dist-info/: METADATA  RECORD
scripts/: recreate_from_docs.py
src/cerebras/: __init__.py
src/cerebras/pytorch/: __init__.py  _compat.py  amp.py  backend.py  distributed.py  metrics.py  numpy.py
src/cerebras/pytorch/backends/: __init__.py  csx.py
src/cerebras/pytorch/optim/: __init__.py  lr_scheduler.py  scheduler.py  weight_decay_scheduler.py
src/cerebras/pytorch/sparse/: __init__.py  configure.py  init.py  utils.py
src/cerebras/pytorch/utils/: __init__.py  data.py  tensorboard.py
src/cerebras/pytorch/utils/benchmark/: __init__.py  dataloader.py
src/cerebras/pytorch/utils/benchmark/utils/: __init__.py  dataloader.py
src/cerebras_pytorch/: __init__.py
tests/: test_imports.py
