[project]
name = "cerebras-pytorch"
version = "2.10.0"
description = "PyTorch extensions for Cerebras Wafer-Scale Cluster"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "torch>=2.4.0",
    "tqdm>=4.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebras"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
