[project]
name = "cerebras-pytorch-src"
version = "0.1.0"
description = "Clean-room compatibility scaffold for the public Cerebras PyTorch API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Clean-room contributors" }]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebras"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
