[project]
name = "cerebras-pytorch"
version = "2.10.0"
description = "PyTorch support for Cerebras Wafer Scale Cluster and ML research"
readme = {file = "cerebras_pytorch-2.10.0.dist-info/METADATA", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}

authors = [
    {name = "Cerebras Systems", email = "support@cerebras.net"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.25.0",
    "pandas>=2.2.3",
    "protobuf>=4.21.12",
    "grpcio>=1.51.1",
    "grpcio-tools>=1.51.1",
    "multiprocess>=0.70.16",
    "boto3<2",
    "dill>=0.3.8",
    "tblib>=3.0.0",
    "tqdm>=4.42.1",
    "psutil<6.0.0",
    "urllib3<3",
    "tabulate>=0.9.0",
    "tensorboard>=2.17.1",
    "torch>=2.4.0",
    "cerebras-appliance",
]

[project.urls]
Homepage = "https://cerebras.net/"
Documentation = "https://docs.cerebras.net/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebras"]

[tool.uv]
python-preference = "system"

[tool.uv.sources]
cerebras-appliance = { path = "../../cerebras-appliance-src/cerebras_appliance-2.10.0", editable = true }
